--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
    
         <h2>Work</h2>
         <p>As mentioned earlier, I make music and so I just want to share soemthing I worked on recently.</p>
-        <video src="/video/My work.mp4" width="500px" height="250px" controls style="padding: 10px; border: 25px; border-style:solid;"></video>
+        <video src="/My work.mp4" width="500px" height="250px" controls style="padding: 10px; border: 25px; border-style:solid;"></video>
 
         <p>Feel free to check out my <a href="https://www.youtube.com/@KingDavo">YouTube channel.</a></p>
 
